--- a/pom.xml
+++ b/pom.xml
@@ -141,8 +141,8 @@
         </dependency>
         <dependency>
             <groupId>com.moderocky</groupId>
-            <artifactId>Mask</artifactId>
-            <version>2.1.4</version>
+            <artifactId>Mask-Bukkit</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
