--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: YeazzyMail
 version: 1.0.0
-main: com.gmail.perhapsitisyeazz.YeazzyMail
-api-version: 1.15
+main: com.gmail.perhapsitisyeazz.yeazzymail.YeazzyMail
+api-version: '1.15'
 description: 'Mail plugin'
-author: [YeaZz_]
+author: 'YeaZz_'
